force-app/main/default/objects/vlocity_ps__SiteServiceProduct__c/vlocity_ps__SiteServiceProduct__c.object-meta.xml
<CustomObject>
    <label>Service/Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services/Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>