force-app/main/default/objects/vlocity_ps__SiteServiceProduct__c/fields/vlocity_ps__Price__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Price__c</fullName>
    <formula>vlocity_ps__SvcProviderAuthPrdId__r.vlocity_ps__Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>