force-app/main/default/objects/vlocity_ps__SiteServiceProduct__c/fields/vlocity_ps__ServiceProviderSiteId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServiceProviderSiteId__c</fullName>
    <label>Service Provider Site</label>
    <referenceTo>vlocity_ps__ServiceProviderSite__c</referenceTo>
    <relationshipName>Site_Services_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>