force-app/main/default/objects/vlocity_ps__SiteServiceProduct__c/fields/vlocity_ps__SvcProviderAuthPrdId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SvcProviderAuthPrdId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service &amp; Product</label>
    <referenceTo>vlocity_ps__ServiceProviderServiceProduct__c</referenceTo>
    <relationshipLabel>Services/Products</relationshipLabel>
    <relationshipName>Site_Services_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>